Add About page and prefix-edit controls for Instructions & Precautions; update nav

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <a class="launch-btn" href="instructions.html">Instructions</a>
           <a class="launch-btn" href="precautions.html">Precautions</a>
           <a class="launch-btn" href="tools.html">Tools</a>
+          <a class="launch-btn" href="about.html">About</a>
         </div>
       </div>
     </main>
