--- a/tools.html
+++ b/tools.html
@@ -20,6 +20,7 @@
           <a href="instructions.html">Instructions</a>
           <a href="precautions.html">Precautions</a>
           <a href="tools.html">Tools</a>
+          <a href="about.html">About</a>
         </nav>
       </div>
     </header>
