--- a/instructions.html
+++ b/instructions.html
@@ -15,6 +15,7 @@
           <a href="instructions.html">Instructions</a>
           <a href="precautions.html">Precautions</a>
           <a href="tools.html">Tools</a>
+          <a href="about.html">About</a>
         </nav>
       </div>
     </header>
@@ -80,7 +81,12 @@
 
 </form>
           </div>
-        </div>
+          </div>
+          <!-- Prefix editor: allows changing the label prefix text for the Instructions page -->
+          <div style="max-width:1200px;margin:8px auto 0;padding:0 16px;color:#fff;">
+            <button id="edit-prefix-btn" class="launch-btn" style="padding:6px 10px;">Edit prefix text</button>
+            <button id="reset-prefix-btn" class="launch-btn" style="padding:6px 10px;background:#444;">Reset prefix</button>
+          </div>
 
         <!-- Column 2: Antimicrobials -->
         <div class="column">
@@ -367,6 +373,30 @@ You can buy a tool called the NoseFrida to suction secretion from the nose. Inse
             setTimeout(function(){ clearBtn.textContent = 'Clear selection'; }, 1200);
           });
         }
+      })();
+    </script>
+    <script>
+      // Prefix editor for Instructions page (stored in localStorage)
+      (function(){
+        var EDIT_KEY = 'ninjatext_instructions_prefix_v1';
+        var defaultPrefix = 'It was a pleasure to care for you in the ER.';
+        var editBtn = document.getElementById('edit-prefix-btn');
+        var resetBtn = document.getElementById('reset-prefix-btn');
+        function read(){ return localStorage.getItem(EDIT_KEY) || defaultPrefix; }
+        function write(v){ localStorage.setItem(EDIT_KEY, v); }
+        // Enhance updateLabel to use the stored prefix
+        var origUpdate = window.updateLabel;
+        if(typeof origUpdate === 'function'){
+          window.updateLabel = function(){
+            var prefix = read();
+            // call original logic but with prefix override by temporarily setting a global
+            window.__ninja_prefix_override = prefix;
+            origUpdate();
+            delete window.__ninja_prefix_override;
+          };
+        }
+        editBtn.addEventListener('click', function(){ var cur = read(); var next = prompt('Edit the prefix text shown above (this will be saved to your browser):', cur); if(next!==null){ write(next); if(typeof window.updateLabel === 'function') window.updateLabel(); editBtn.textContent='Saved'; setTimeout(()=>editBtn.textContent='Edit prefix text',1200); }});
+        resetBtn.addEventListener('click', function(){ if(!confirm('Reset prefix to default?')) return; write(defaultPrefix); if(typeof window.updateLabel === 'function') window.updateLabel(); resetBtn.textContent='Reset'; setTimeout(()=>resetBtn.textContent='Reset prefix',1200); });
       })();
     </script>
   </body>
