Move prefix controls into actions; persistable prefix for both pages; normalize nav; clean about.html

--- a/about.html
+++ b/about.html
@@ -1,345 +1,30 @@
-<!doctype html><!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>About — NinjaText</title>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<header class="topnav">
+			<div class="nav-inner">
+				<a class="nav-brand" href="index.html">NinjaText | About</a>
+				<nav class="nav-links">
+					<a href="index.html">Home</a>
+					<a href="instructions.html">Instructions</a>
+					<a href="precautions.html">Precautions</a>
+					<a href="tools.html">Tools</a>
+					<a href="about.html">About</a>
+				</nav>
+			</div>
+		</header>
 
-<html lang="en"><html>
-
-  <head>  <head>
-
-    <meta charset="utf-8" />	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <meta name="viewport" content="width=device-width,initial-scale=1" />	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-
-    <title>About  NinjaText</title>	<title>QuickText</title>
-
-    <link rel="stylesheet" href="styles.css">	<style>
-
-  </head>		html {
-
-  <body>			height:100%;
-
-    <header class="topnav">		}
-
-      <div class="nav-inner">		body {
-
-        <a class="nav-brand" href="index.html">NinjaText | About</a>			background-color:#FFF;
-
-        <nav class="nav-links">			margin:0;
-
-          <a href="index.html">Home</a>			height:100%;
-
-          <a href="instructions.html">Instructions</a>		}
-
-          <a href="precautions.html">Precautions</a>	</style>
-
-          <a href="tools.html">Tools</a>	<!-- copy these lines to your document head: -->
-
-          <a href="about.html">About</a>
-
-        </nav>	<meta name="viewport" content="user-scalable=yes, width=1240" />
-
-      </div>
-
-    </header>	<!-- end copy -->
-
-  </head>
-
-    <main class="page" style="padding-bottom:160px;">  <body>
-
-      <div style="max-width:900px;margin:40px auto;color:#fff;">	<!-- copy these lines to your document: -->
-
-        <h1>About</h1>
-
-        <p>Created by Taylor Terlizzese, DO. 9 2025</p>	<div id="quicktext_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1240px;height:800px;overflow:hidden;">
-
-      </div>		<script type="text/javascript" charset="utf-8" src="QuickText.hyperesources/quicktext_hype_generated_script.js?27954"></script>
-
-    </main>	</div>
-
-  </body>
-
-</html>	<!-- end copy -->
-
-	
-
-
-	<!-- text content for search engines: -->
-
-	<div style="display:none" aria-hidden=true>
-
-		<div>New Text</div>
-		<div>Precautions</div>
-		<div>Home</div>
-		<div>Button</div>
-		<div>Instructions</div>
-		<div>
-</div>
-		<div>Medical decision making templates</div>
-		<div></div>
-		<div>MDM</div>
-		<div>Tools</div>
-		<div>
-</div>
-		<div>Medication Precautions
-Sedating ED meds
-Sedating home meds
-Antibiotics
-Anticoags
-Antihypertensives
-Diabetes
-Diuretics
-Dangerous to kids
-
-</div>
-		<div>Rx Pain Meds
-For mild pain
-Robaxin
-Flexeril
-Gabapentin
-Flexeril
-Lidoderm
-For severe pain
-Tylenol 3
-Norco
-
-</div>
-		<div>Check C</div>
-		<div>OTC Pain meds
-For mild pain
-Tylenol 500/1000
-Motrin 400 or Tylenol 500
-For severe pain
-Motrin 800/ Tylenol 1000
-Aleve 500
-Toradol 10
-
-</div>
-		<div>Pediatric Meds
-Tylenol
-Motrin
-Amoxicillin
-Augmentin
-Keflex
-Azithro
-Zyrtec
-Benadryl
-Zofran solution
-Zofran tablets
-NoseFrida
-Honey for cough
-Gargle salt-water
-
-</div>
-		<div>Antimicrobials
-Systemic
-Amoxicillin BID x7d
-Augmentin BID x7d
-Azithro (Z-pack)
-Bactrim BID xd
-Doxy BID x7d
-Flagyl daily x7d
-Fluconazole daily x2 wk
-Keflex bid x7d
-Macrobid bid x5d
-Pyridium tid x7d
-Topical
-Clotrimazole cream BID
-Ketoconazole cream
-Permethrin cream
-Ophthalmic
-Erythromycin ophtho
-Ofloxacin ophtho
-Otic
-Ciprodex drops
-Ofloxacin ear drops
-Ear wick
-
-</div>
-		<div>Other Meds
-Protonix qd x 30d
-Pepcid prn
-Tums prn
-
-</div>
-		<div>Discharge Instructions</div>
-		<div>Antiemetics
-Zofran
-Antivert
-Reglan
-
-</div>
-		<div>Wound care
-General wound
-Absorbable
-Non-absorbable
-
-</div>
-		<div>Antihistamines/Steroids
-Benadryl prn
-Zyrtec daily
-Hydrocortisone cream
-Pred 10 x5d
-Pred 50 x5d
-EpiPen
-
-</div>
-		<div>Cough/Cold/Asthma
-Albuterol
-Inhailer instructions
-Mucinex
-Tessalon
-Netti Pot
-Honey for cough
-Gargle salt-water
-
-</div>
-		<div>Select an option to get started </div>
-		<div>Home</div>
-		<div>Minor
-Emergencies</div>
-		<div>MDCalc</div>
-		<div>Antibiotics
-</div>
-		<div></div>
-		<div>Clinical tools</div>
-		<div>Open
-Evidence
-</div>
-		<div>Cleo
-</div>
-		<div>Retrieve account log-ins</div>
-		<div>UpToDate</div>
-		<div>
-</div>
-		<div>CorePendium</div>
-		<div>General
-worsening or severe pain
-sudden worsening
-fatigue/weakness
-pain that does not improve w/ meds
-anything new or concerning
-chest pain, dyspnea, syncope
-unintentional weight-loss
-polyuria/ polydypsia/ fatigue
-
-</div>
-		<div>Psych
-SI
-HI
-psychosis
-trouble w/ ADLs
-
-</div>
-		<div>Pulmonary
-shortness of breath
-low pulse Ox
-pain with breathing
-wheezing
-coughing up blood
-
-</div>
-		<div>Ophtho
-vision changes
-eye pain
-visual curtain
-purulent drainage
-pain with EOMs
-
-</div>
-		<div>Female GU
-vaginal bleeding >2 pads per hour
-drainage from the vagina
-worsening or severe pelvic pain
-
-</div>
-		<div>GU/Renal
-pain or burning with peeing
-blood in the urine
-back/flank pain
-enuresis
-
-</div>
-		<div>MSK
-worsening joint pain
-joint swelling or redness
-open wound or bleeding
-ischemic UE
-ischemic LE
-pain w/ ambulation
-
-</div>
-		<div>Male GU
-discharge from penis
-new lesions/sores on the penis
-scrotal pain or swelling
-
-</div>
-		<div>Cardiac
-chest pain
-chest pain with activities
-syncope
-palpitations
-new or worsening leg swelling
-
-</div>
-		<div>GI
-vomiting
-vomiting after nausea meds
-vomiting blood/dark brown vomit
-bloody or black stools
-jaundice
-
-</div>
-		<div>Neuro
-new weakness
-new numbness or tingling
-new blurry or double vision
-new speech changes
-coordination/gait changes
-confusion
-severe headache
-new seizures
-neck stiffness
-
-</div>
-		<div>Infectious/Immune
-Fever ≥100.4ºF or chills
-drainage of pus from a wound
-angioedema
-wheezing/stridor
-
-</div>
-		<div>Peds
-lethargy
-respiratory distress
-fussy/inconsolable
-diet or BM changes
-dehydration
-vomiting/diarrhea
-high fever
-rash/petechiae
-
-</div>
-		<div>ENT
-stridor
-odynophagia
-changes in phonation
-hearing loss
-ear pain w/ fever
-ear drainage
-severe epistaxis
-
-</div>
-		<div>Return Precautions</div>
-		<div>Skin
-worsening rash
-new redness / swelling of wound
-rash w/ fever, blisters, peeling
-worsening urticaria
-
-</div>
-
-	</div>
-
-	<!-- end text content: -->
-
-  </body>
+		<main class="page" style="padding-bottom:160px;">
+			<div style="max-width:900px;margin:40px auto;color:#fff;">
+				<h1>About</h1>
+				<p>Created by Taylor Terlizzese, DO. © 2025</p>
+			</div>
+		</main>
+	</body>
 </html>
