--- a/precautions.html
+++ b/precautions.html
@@ -307,14 +307,10 @@
           <div class="action-buttons">
             <button id="copy-selected-btn" class="copy-btn" type="button">Copy</button>
             <button id="clear-selected-btn" class="clear-btn" type="button">Clear selection</button>
+            <button id="edit-prec-prefix-btn" class="launch-btn" style="padding:6px 10px;">Edit prefix text</button>
+            <button id="reset-prec-prefix-btn" class="launch-btn" style="padding:6px 10px;background:#444;">Reset prefix</button>
           </div>
         </div>
-      </div>
-
-      <!-- Prefix editor for Precautions page -->
-      <div style="max-width:1200px;margin:8px auto 120px;padding:0 16px;color:#fff;">
-        <button id="edit-prec-prefix-btn" class="launch-btn" style="padding:6px 10px;">Edit prefix text</button>
-        <button id="reset-prec-prefix-btn" class="launch-btn" style="padding:6px 10px;background:#444;">Reset prefix</button>
       </div>
 
       <script>
@@ -340,10 +336,14 @@
           var copyBtn = document.getElementById('copy-selected-btn');
           var clearBtn = document.getElementById('clear-selected-btn');
 
+          var PREC_PREFIX_KEY = 'ninjatext_precautions_prefix_v1';
+          var PREC_DEFAULT_PREFIX = 'Your evaluation was reassuring that you are not having an emergency at this time, but symptoms can change. Please be on the lookout for the following symptoms and return to the ER as needed:';
+          function readPrecPrefix(){ return localStorage.getItem(PREC_PREFIX_KEY) || PREC_DEFAULT_PREFIX; }
+
           function updateLabel(){
             var inputs = inputsForPage();
             var checked = inputs.filter(function(i){ return i.checked; });
-            var prefix = 'Your evaluation was reassuring that you are not having an emergency at this time, but symptoms can change. Please be on the lookout for the following symptoms and return to the ER as needed:';
+            var prefix = window.__ninja_prec_prefix || readPrecPrefix();
             if(!checked.length){ label.textContent = prefix + ' ' + 'No items selected.'; return; }
             var parts = checked.map(function(i){ var decoded = decodeHtml(i.value || ''); return stripHtmlToText(decoded).trim(); }).filter(Boolean);
             // Prefix followed immediately by the items (append inline, no newlines)
@@ -365,6 +365,14 @@
 
           clearBtn.addEventListener('click', function(){ var inputs = inputsForPage(); inputs.forEach(function(i){ i.checked = false; }); updateLabel(); clearBtn.textContent = 'Cleared'; setTimeout(function(){ clearBtn.textContent = 'Clear selection'; },1200); });
         })();
+          // Wire edit/reset buttons for Precautions
+          (function(){
+            var editBtn = document.getElementById('edit-prec-prefix-btn');
+            var resetBtn = document.getElementById('reset-prec-prefix-btn');
+            if(!editBtn || !resetBtn) return;
+            editBtn.addEventListener('click', function(){ var cur = readPrecPrefix(); var next = prompt('Edit the prefix text for Precautions (saved in this browser):', cur); if(next!==null){ localStorage.setItem(PREC_PREFIX_KEY, next); updateLabel(); editBtn.textContent='Saved'; setTimeout(()=>editBtn.textContent='Edit prefix text',1200); }});
+            resetBtn.addEventListener('click', function(){ if(!confirm('Reset prefix to default?')) return; localStorage.setItem(PREC_PREFIX_KEY, PREC_DEFAULT_PREFIX); updateLabel(); resetBtn.textContent='Reset'; setTimeout(()=>resetBtn.textContent='Reset prefix',1200); });
+          })();
       </script>
       <script>
         // Prefix editor for Precautions page (separate block to avoid colliding with main logic)
