Remove prefix edit controls; restore fixed prefixes; clean about page

--- a/instructions.html
+++ b/instructions.html
@@ -292,8 +292,6 @@ You can buy a tool called the NoseFrida to suction secretion from the nose. Inse
         <div class="action-buttons">
             <button id="copy-selected-btn" class="copy-btn" type="button">Copy</button>
             <button id="clear-selected-btn" class="clear-btn" type="button">Clear selection</button>
-            <button id="edit-prefix-btn" class="launch-btn" style="padding:6px 10px;">Edit prefix text</button>
-            <button id="reset-prefix-btn" class="launch-btn" style="padding:6px 10px;background:#444;">Reset prefix</button>
         </div>
       </div>
     </div>
@@ -318,13 +316,9 @@ You can buy a tool called the NoseFrida to suction secretion from the nose. Inse
         var label = document.getElementById('selected-label');
         var copyBtn = document.getElementById('copy-selected-btn');
 
-        var INSTR_PREFIX_KEY = 'ninjatext_instructions_prefix_v1';
-        var INSTR_DEFAULT_PREFIX = 'It was a pleasure to care for you in the ER.';
-        function readInstrPrefix(){ return localStorage.getItem(INSTR_PREFIX_KEY) || INSTR_DEFAULT_PREFIX; }
-
         function updateLabel(){
           var checked = inputs.filter(function(i){ return i.checked; });
-          var prefix = window.__ninja_prefix_override || readInstrPrefix();
+          var prefix = 'It was a pleasure to care for you in the ER.';
           if(!checked.length){
             label.textContent = prefix + '\n' + 'No items selected.';
             return;
@@ -376,15 +370,6 @@ You can buy a tool called the NoseFrida to suction secretion from the nose. Inse
         }
       })();
     </script>
-    <script>
-        // Wire the Edit/Reset buttons for Instructions
-        (function(){
-          var editBtn = document.getElementById('edit-prefix-btn');
-          var resetBtn = document.getElementById('reset-prefix-btn');
-          if(!editBtn || !resetBtn) return;
-          editBtn.addEventListener('click', function(){ var cur = readInstrPrefix(); var next = prompt('Edit the prefix text shown above (saved to this browser):', cur); if(next!==null){ localStorage.setItem(INSTR_PREFIX_KEY, next); updateLabel(); editBtn.textContent='Saved'; setTimeout(()=>editBtn.textContent='Edit prefix text',1200); }});
-          resetBtn.addEventListener('click', function(){ if(!confirm('Reset prefix to default?')) return; localStorage.setItem(INSTR_PREFIX_KEY, INSTR_DEFAULT_PREFIX); updateLabel(); resetBtn.textContent='Reset'; setTimeout(()=>resetBtn.textContent='Reset prefix',1200); });
-        })();
-    </script>
+    
   </body>
 </html>
