--- a/precautions.html
+++ b/precautions.html
@@ -307,8 +307,6 @@
           <div class="action-buttons">
             <button id="copy-selected-btn" class="copy-btn" type="button">Copy</button>
             <button id="clear-selected-btn" class="clear-btn" type="button">Clear selection</button>
-            <button id="edit-prec-prefix-btn" class="launch-btn" style="padding:6px 10px;">Edit prefix text</button>
-            <button id="reset-prec-prefix-btn" class="launch-btn" style="padding:6px 10px;background:#444;">Reset prefix</button>
           </div>
         </div>
       </div>
@@ -336,14 +334,10 @@
           var copyBtn = document.getElementById('copy-selected-btn');
           var clearBtn = document.getElementById('clear-selected-btn');
 
-          var PREC_PREFIX_KEY = 'ninjatext_precautions_prefix_v1';
-          var PREC_DEFAULT_PREFIX = 'Your evaluation was reassuring that you are not having an emergency at this time, but symptoms can change. Please be on the lookout for the following symptoms and return to the ER as needed:';
-          function readPrecPrefix(){ return localStorage.getItem(PREC_PREFIX_KEY) || PREC_DEFAULT_PREFIX; }
-
           function updateLabel(){
             var inputs = inputsForPage();
             var checked = inputs.filter(function(i){ return i.checked; });
-            var prefix = window.__ninja_prec_prefix || readPrecPrefix();
+            var prefix = 'Your evaluation was reassuring that you are not having an emergency at this time, but symptoms can change. Please be on the lookout for the following symptoms and return to the ER as needed:';
             if(!checked.length){ label.textContent = prefix + ' ' + 'No items selected.'; return; }
             var parts = checked.map(function(i){ var decoded = decodeHtml(i.value || ''); return stripHtmlToText(decoded).trim(); }).filter(Boolean);
             // Prefix followed immediately by the items (append inline, no newlines)
@@ -364,56 +358,6 @@
           });
 
           clearBtn.addEventListener('click', function(){ var inputs = inputsForPage(); inputs.forEach(function(i){ i.checked = false; }); updateLabel(); clearBtn.textContent = 'Cleared'; setTimeout(function(){ clearBtn.textContent = 'Clear selection'; },1200); });
-        })();
-          // Wire edit/reset buttons for Precautions
-          (function(){
-            var editBtn = document.getElementById('edit-prec-prefix-btn');
-            var resetBtn = document.getElementById('reset-prec-prefix-btn');
-            if(!editBtn || !resetBtn) return;
-            editBtn.addEventListener('click', function(){ var cur = readPrecPrefix(); var next = prompt('Edit the prefix text for Precautions (saved in this browser):', cur); if(next!==null){ localStorage.setItem(PREC_PREFIX_KEY, next); updateLabel(); editBtn.textContent='Saved'; setTimeout(()=>editBtn.textContent='Edit prefix text',1200); }});
-            resetBtn.addEventListener('click', function(){ if(!confirm('Reset prefix to default?')) return; localStorage.setItem(PREC_PREFIX_KEY, PREC_DEFAULT_PREFIX); updateLabel(); resetBtn.textContent='Reset'; setTimeout(()=>resetBtn.textContent='Reset prefix',1200); });
-          })();
-      </script>
-      <script>
-        // Prefix editor for Precautions page (separate block to avoid colliding with main logic)
-        (function(){
-          var EDIT_KEY = 'ninjatext_precautions_prefix_v1';
-          var defaultPrefix = 'Your evaluation was reassuring that you are not having an emergency at this time, but symptoms can change. Please be on the lookout for the following symptoms and return to the ER as needed:';
-          var editBtn = document.getElementById('edit-prec-prefix-btn');
-          var resetBtn = document.getElementById('reset-prec-prefix-btn');
-          function read(){ return localStorage.getItem(EDIT_KEY) || defaultPrefix; }
-          function write(v){ localStorage.setItem(EDIT_KEY, v); }
-
-          // If updateLabel exists, wrap it so it uses stored prefix when available
-          if(window.updateLabel && typeof window.updateLabel === 'function'){
-            var orig = window.updateLabel;
-            window.updateLabel = function(){
-              var stored = read();
-              // expose temporary override for main script to pick up
-              window.__ninja_prec_prefix = stored;
-              try{ orig(); }finally{ delete window.__ninja_prec_prefix; }
-            };
-            // call once to initialize with stored prefix
-            window.updateLabel();
-          } else {
-            // No global updateLabel available — provide a fallback that updates the label directly
-            var label = document.getElementById('selected-label');
-            function applyStoredPrefix(){
-              var cur = label.textContent || '';
-              var stored = read();
-              if(cur.indexOf(':')>-1){
-                // naive replace: prefix before first ':'
-                var rest = cur.substring(cur.indexOf(':')+1).trim();
-                label.textContent = stored + ' ' + rest;
-              } else {
-                label.textContent = stored + ' ' + cur;
-              }
-            }
-            applyStoredPrefix();
-          }
-
-          editBtn.addEventListener('click', function(){ var cur = read(); var next = prompt('Edit the prefix text for Precautions (saved in this browser):', cur); if(next!==null){ write(next); if(window.updateLabel) window.updateLabel(); editBtn.textContent='Saved'; setTimeout(()=>editBtn.textContent='Edit prefix text',1200); }});
-          resetBtn.addEventListener('click', function(){ if(!confirm('Reset prefix to default?')) return; write(defaultPrefix); if(window.updateLabel) window.updateLabel(); resetBtn.textContent='Reset'; setTimeout(()=>resetBtn.textContent='Reset prefix',1200); });
         })();
       </script>
     </main>
