About: add NJ.png logo, center it above created-by text; remove About heading; simplify nav-brand

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<body>
 		<header class="topnav">
 			<div class="nav-inner">
-				<a class="nav-brand" href="index.html">NinjaText | About</a>
+				<a class="nav-brand" href="index.html">NinjaText</a>
 				<nav class="nav-links">
 					<a href="index.html">Home</a>
 					<a href="instructions.html">Instructions</a>
@@ -21,8 +21,8 @@
 		</header>
 
 		<main class="page" style="padding-bottom:160px;">
-			<div style="max-width:900px;margin:40px auto;color:#fff;">
-				<h1>About</h1>
+			<div style="max-width:900px;margin:40px auto;color:#fff;text-align:center;">
+				<img src="NJ.png" alt="NinjaText logo" style="max-width:240px;height:auto;margin:0 auto 18px;display:block;" />
 				<p>Created by Taylor Terlizzese, DO. © 2025</p>
 			</div>
 		</main>
