Home: add NJ.png logo centered above welcome

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </header>
 
     <main class="welcome-container">
-      <div>
+      <div style="text-align:center;">
+        <img src="NJ.png" alt="NinjaText logo" style="max-width:240px;height:auto;margin:0 auto 18px;display:block;" />
         <h1>Welcome to NinjaText</h1>
         <div style="margin-top:18px; display:flex; gap:12px; justify-content:center;">
           <a class="launch-btn" href="instructions.html">Instructions</a>
