--- a/instructions.html
+++ b/instructions.html
@@ -108,11 +108,15 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
 <input class="instruction" type="checkbox" name="instruction" value="Take fluconazole 300 mg by mouth daily for 2 weeks.">Fluconazole daily x2 wk<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="Take Keflex (Cephalexin) 500 mg twice a day for 7 days.">Keflex bid x7d<br>
-<input class="instruction" type="checkbox" name="instruction" value="Apply mupirocin 2% three times a day to the affected area for 5 days">Macrobid bid x5d<br>
 
-<input class="instruction" type="checkbox" name="instruction" value="Take phenazopyridine (Pyridium) 200 mg three times a day for 2 days.">Pyridium tid x7d<br>
+<input class="instruction" type="checkbox" name="instruction" value="Take Macrobid (nitrofurantoin) 100 mg twice a day for 5 days">Macrobid bid x5d<br>
+
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Pyridium (phenazopyridine) 200 mg three times a day for 2 days.">Pyridium tid x7d<br>
 
 <u>Topical</u><br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Apply mupirocin 2% three times a day to the affected area for 5 days">Mupirocin tid<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="Apply clotrimazole 1% twice a day to the affected area for at least 1 week after lesions resolved.">Clotrimazole cream BID<br>
 
@@ -226,10 +230,10 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
           <div class="section">
             <form id="pediatric-form">
 <span style="font-weight: 700;">Pediatric Meds</span><br>
-<input class="instruction" type="checkbox" name="instruction" value="Give *** mL (15 mg/kg) of acetaminophen (Tylenol) by mouth every 4–6 hours as needed for pain or fever for up to 72 hours, not to exceed 75 mg/kg/day or 4,000 mg/day. 
+<input class="instruction" type="checkbox" name="instruction" value="Give acetaminophen (Tylenol) by mouth every 4–6 hours as needed for pain or fever for up to 72 hours. The dose is 15mg/kg. Not to exceed 75 mg/kg/day or 4,000 mg/day. 
 ">Tylenol<br>
 
-<input class="instruction" type="checkbox" name="instruction" value="Give *** mL (10 mg/kg) of ibuprofen (Motrin) by mouth every 6-8 hours as needed for pain or fever, not to exceed 40 mg/kg/day or 2,400 mg/day. Administer with food or milk to reduce stomach upset. ">Motrin<br>
+<input class="instruction" type="checkbox" name="instruction" value="Give ibuprofen (Motrin) by mouth every 6-8 hours as needed for pain or fever. The dose is 10 mg/kg. Not to exceed 40 mg/kg/day or 2,400 mg/day. Administer with food or milk to reduce stomach upset. ">Motrin<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="Give *** mL (*** mg) of amoxicillin (Amoxil) by mouth every 12 hours for *** days to treat their infection.">Amoxicillin<br>
 
