Add Reference page and navigation link

--- a/about.html
+++ b/about.html
@@ -11,13 +11,14 @@
 			<div class="nav-inner">
 				<a class="nav-brand" href="index.html">NinjaText</a>
 				<nav class="nav-links">
-					<a href="index.html">Home</a>
-					<a href="instructions.html">Instructions</a>
-					<a href="precautions.html">Precautions</a>
-					<a href="tools.html">Tools</a>
-					<a href="about.html">About</a>
-				</nav>
-			</div>
+          <a href="index.html">Home</a>
+          <a href="instructions.html">Instructions</a>
+          <a href="precautions.html">Precautions</a>
+          <a href="tools.html">Tools</a>
+          <a href="reference.html">Reference</a>
+          <a href="about.html">About</a>
+        </nav>
+      </div>
 		</header>
 
 		<main class="page" style="padding-bottom:160px;">
