--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <a href="instructions.html">Instructions</a>
           <a href="precautions.html">Precautions</a>
           <a href="tools.html">Tools</a>
+          <a href="reference.html">Reference</a>
           <a href="about.html">About</a>
         </nav>
       </div>
@@ -28,10 +29,10 @@
           <a class="launch-btn" href="instructions.html">Instructions</a>
           <a class="launch-btn" href="precautions.html">Precautions</a>
           <a class="launch-btn" href="tools.html">Tools</a>
+          <a class="launch-btn" href="reference.html">Reference</a>
           <a class="launch-btn" href="about.html">About</a>
         </div>
       </div>
     </main>
   </body>
 </html>
-
