--- a/precautions.html
+++ b/precautions.html
@@ -15,6 +15,7 @@
           <a href="instructions.html">Instructions</a>
           <a href="precautions.html">Precautions</a>
           <a href="tools.html">Tools</a>
+          <a href="reference.html">Reference</a>
           <a href="about.html">About</a>
         </nav>
       </div>
@@ -356,7 +357,6 @@
             if(!trimmedExisting) return trimmedAddition;
             if(!trimmedAddition) return trimmedExisting;
             var paragraphBreak = /\r\n/.test(existingText) ? '\r\n\r\n' : '\n\n';
-            var extraBreak = paragraphBreak === '\r\n\r\n' ? '\r\n' : '\n';
             return trimmedExisting + paragraphBreak + extraBreak + trimmedAddition;
           }
 
