Expand Reference landing with category buttons

--- a/reference.html
+++ b/reference.html
@@ -29,34 +29,76 @@
         </div>
         <section class="reference-hero">
           <h1>Reference</h1>
-          <p>This workspace is optimized for a vertical mobile view so it feels like a lightweight native app. Pick a section to begin and we can wire up the details next.</p>
+          <p>Pick an emergency category to open its focused dictionary of doses, normal values, and quick pearls. We can wire these buttons to dedicated pages as we build them out.</p>
         </section>
-        <section class="reference-card-list" aria-label="Reference sections">
-          <button class="reference-card" type="button">
+        <section class="reference-card-list" aria-label="Reference categories">
+          <button class="reference-card" type="button" data-target="reference-cardiac.html">
             <div>
-              <div class="reference-card-label">Clinical Guides</div>
-              <div class="reference-card-sub">Evidence-based summaries and pearls.</div>
+              <div class="reference-card-label">Cardiac Emergencies</div>
+              <div class="reference-card-sub">ACS meds, arrhythmias, hemodynamics.</div>
             </div>
             <span aria-hidden="true">›</span>
           </button>
-          <button class="reference-card" type="button">
+          <button class="reference-card" type="button" data-target="reference-respiratory.html">
             <div>
-              <div class="reference-card-label">Dosing Reference</div>
-              <div class="reference-card-sub">Weight-based lookups for quick checks.</div>
+              <div class="reference-card-label">Respiratory Distress</div>
+              <div class="reference-card-sub">Asthma, COPD, RSI meds.</div>
             </div>
             <span aria-hidden="true">›</span>
           </button>
-          <button class="reference-card" type="button">
+          <button class="reference-card" type="button" data-target="reference-neuro.html">
             <div>
-              <div class="reference-card-label">Imaging Criteria</div>
-              <div class="reference-card-sub">Decision rules and best practices.</div>
+              <div class="reference-card-label">Neurologic / Stroke</div>
+              <div class="reference-card-sub">Thrombolytics, seizure rescue dosing.</div>
             </div>
             <span aria-hidden="true">›</span>
           </button>
-          <button class="reference-card" type="button">
+          <button class="reference-card" type="button" data-target="reference-gi.html">
             <div>
-              <div class="reference-card-label">Procedures</div>
-              <div class="reference-card-sub">Step-by-step refreshers.</div>
+              <div class="reference-card-label">GI Emergencies</div>
+              <div class="reference-card-sub">Bleed reversal, antiemetics, pancreatitis.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </button>
+          <button class="reference-card" type="button" data-target="reference-gu.html">
+            <div>
+              <div class="reference-card-label">GU / Renal</div>
+              <div class="reference-card-sub">Electrolyte corrections, UTI, obstruction.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </button>
+          <button class="reference-card" type="button" data-target="reference-trauma.html">
+            <div>
+              <div class="reference-card-label">Trauma &amp; Shock</div>
+              <div class="reference-card-sub">Massive transfusion, TXA, analgesia.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </button>
+          <button class="reference-card" type="button" data-target="reference-toxicology.html">
+            <div>
+              <div class="reference-card-label">Toxicology</div>
+              <div class="reference-card-sub">Antidotes, toxidromes, labs.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </button>
+          <button class="reference-card" type="button" data-target="reference-endocrine.html">
+            <div>
+              <div class="reference-card-label">Endocrine / Metabolic</div>
+              <div class="reference-card-sub">DKA, thyroid storm, adrenal crisis.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </button>
+          <button class="reference-card" type="button" data-target="reference-peds.html">
+            <div>
+              <div class="reference-card-label">Pediatric Emergencies</div>
+              <div class="reference-card-sub">Weight-based crash cart dosing.</div>
+            </div>
+            <span aria-hidden="true">›</span>
+          </button>
+          <button class="reference-card" type="button" data-target="reference-obgyn.html">
+            <div>
+              <div class="reference-card-label">OB / GYN</div>
+              <div class="reference-card-sub">PPH meds, PIH, ectopic support.</div>
             </div>
             <span aria-hidden="true">›</span>
           </button>
